[tool.poetry]
name = "ctpapi"
version = "0.1.0"
description = "Python library of C++ CTPAPI."
authors = ["Jedore <jedore@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jedore/ctpapi-python"
repository = "https://github.com/Jedore/ctpapi-python"
keywords = ['ctpapi']
classifiers = [
    'Environment :: Console',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    {include = ""}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.build]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Bug Tracker" = "https://github.com/Jedore/ctpapi-python/issues"
