[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctpapi-6319"
description = 'A package for CTPAPI-6.3.19'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["ctpapi"]
authors = [
    { name = "Jedore", email = "jedore@protonmail.com" },
]
maintainers = [
    { name = "Jedore", email = "jedore@protonmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/Jedore/ctpapi-python"

[tool.hatch.version]
path = "ctpapi_6319/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ctpapi_6319 --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "ctpapi_6319/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build]
include = [
    "ctpapi_6319/__init__.py",
    "ctpapi_6319/thostmduserapi.py",
]

[tool.hatch.build.sources]
"ctpapi_6319/mac_x64" = "ctpapi_6319"
"ctpapi_6319/linux_x64" = "ctpapi_6319"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build_hook.py"
